Revision history for Perl extension App::ForkProve

v0.4.5 Mon Jan  7 15:21:29 PST 2013
       - Enabled option bundling so that forprove -lr etc should work (doy)
       - Blacklisted Test::LeakTrace because it doesn't work under forkprove (doy)
       - Fixed a warning for older perls

v0.4.4 Thu Dec 20 18:22:51 JST 2012
       - Restore DATA in test script (hanabokuro)
       - Restore Getopt::Long defaults in case apps and modules in tests use it (hanabokuro)

v0.4.3 Wed Nov 21 08:11:51 PST 2012
       - Fix exit status code

v0.4.2 Mon Nov 12 20:18:49 PST 2012
       - Support --merge (#9)
       - Fix Getopt::Long options to make options case sensitive

v0.4.1 Fri Nov  9 14:10:47 PST 2012
       - Clear @ARGV for each test (#8)

v0.4.0 Fri Nov  9 08:53:58 PST 2012
       - Simplified the blacklist logic (mst)
       - Added the srand() initialization (markstos)
       - Fixed the version number scheme (xdg)

0.3.0 Thu Nov  8 16:13:17 PST 2012
      - Now you can preload Test::Builder and friends because forkprove resets the state
      - Blacklisted Test::SharedFork for now since we can't reset its state

0.2.3 Thu Nov  8 12:00:23 PST 2012
      - Added a warning when preloading modules ended up requiring Test::Builder
      - Fixed the test handler routine to use the same as prove so that .pl test can run

0.2.2 Wed Nov  7 23:31:55 PST 2012
      - Correct the error handling inside .t in case they return non-true value
      - Autoflush STDOUT/STDERR so that we can see progressive test output (doy)

0.2.1 Wed Nov  7 20:33:54 PST 2012
      - Improved error handling in .t (jswartz)
      - Relaxed the documentaion about known tests to fail

0.2.0 Wed Nov  7 12:40:48 PST 2012
      - More stablized -j option
      - Added PERL_FORKPROVE_IGNORE environment value to specify tests to ignore and
        run with the standard perl execution with prove
      - Reset regular expression engine state (doy)

0.1.5 Tue Nov  6 17:24:34 PST 2012