@@ -1,35 +1,0 @@
-.gitignore
-bin/forkprove
-Changes
-inc/Module/Install.pm
-inc/Module/Install/Base.pm
-inc/Module/Install/Can.pm
-inc/Module/Install/Fetch.pm
-inc/Module/Install/Makefile.pm
-inc/Module/Install/Metadata.pm
-inc/Module/Install/ReadmeFromPod.pm
-inc/Module/Install/Repository.pm
-inc/Module/Install/Scripts.pm
-inc/Module/Install/Win32.pm
-inc/Module/Install/WriteAll.pm
-lib/App/ForkProve.pm
-lib/App/ForkProve/PipeIterator.pm
-lib/App/ForkProve/SourceHandler.pm
-Makefile.PL
-MANIFEST			This list of files
-META.yml
-README
-t/00_compile.t
-t/argv.t
-t/data.t
-t/dollar_bang.t
-t/getopt_long.t
-t/main.t
-t/merge.t
-t/no_plan.t
-t/Rand.pm
-t/rand1.t
-t/rand2.t
-t/undef.t
-t/zero.t
-xt/pod.t
