@@ -1,0 +1,10 @@
+requires 'App::Prove', '3.25';
+requires 'TAP::Harness', '3.25';
+requires 'parent', '0.221';
+requires 'perl', '5.008001';
+requires 'version', '0.77';
+
+on test => sub {
+    requires 'Test::More', '0.88';
+    requires 'Test::Requires';
+};
