@@ -1,4 +1,0 @@
-use strict;
-use Test::More tests => 1;
-
-BEGIN { use_ok 'App::ForkProve' }
